--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@jridgewell/trace-mapping": "^0.3.25",
     "typescript": "^5.4.0",
+    "@types/node": "^20.11.17",
     "tsup": "^8.0.0"
   },
   "scripts": {
