--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "declaration": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "types": ["node"]
     },
     "include": ["src", "../../vite-plugin-civetman-fork/builtin-civetman-fork/civetMapToV3.ts", "../../vite-plugin-civetman-fork/builtin-civetman-fork/civetMapLines.ts"]
   }
